# civic-connect

./: .conflow.yaml  .editorconfig  .gitignore  .guix-channel  0-AI-MANIFEST.a2ml  ABI-FFI-README.md  AI.djot  CHANGELOG.md  CITATION.cff  CONTRIBUTING.adoc  CONTRIBUTING.md  ECOSYSTEM.scm  EXPLAINME.adoc  Justfile  META.scm  PROOF-NEEDS.md  QUICKSTART-DEV.adoc  QUICKSTART-MAINTAINER.adoc  QUICKSTART-USER.adoc  README.adoc  README.md  ROADMAP.adoc  RSR_COMPLIANCE.adoc  RSR_OUTLINE.adoc  STATE.scm  TEST-NEEDS.md  TOPOLOGY.md  URGENT-RESCRIPT-MIGRATION.md  codemeta.json  flake.nix  guix.scm  justfile  k9iser.toml  llm-warmup-dev.md  llm-warmup-user.md  setup.sh  stapeln.toml  wokelangiser.toml
.claude/: CLAUDE.md
.github/workflows/: boj-build.yml  quality.yml  workflow-linter.yml
.hypatia/: activity.jsonl  last-visit.json
.machine_readable/: ADJUST.contractile  AGENTIC.scm  CLADE.a2ml  ECOSYSTEM.scm  INTENT.contractile  META.scm  MUST.contractile  NEUROSYM.scm  PLAYBOOK.scm  STATE.scm  TRUST.contractile
.machine_readable/6a2/: ECOSYSTEM.a2ml  META.a2ml  STATE.a2ml
.machine_readable/anchors/: ANCHOR.a2ml
.machine_readable/svc/: README.adoc
.well-known/: ai.txt  dc.xml  humans.txt  provenance.json  security.txt
.well-known/groove/: manifest.json
backend/ada-core/: civicconnect.gpr
backend/elixir-phoenix/: mix.exs
backend/rust-api/: Cargo.toml
backend/rust-api/src/: error.rs  lib.rs  main.rs
backend/rust-api/src/api/: auth.rs  events.rs  health.rs  location.rs  mod.rs  users.rs  verify.rs
backend/rust-api/src/crypto/: mod.rs
backend/rust-api/src/db/: mod.rs
backend/rust-api/src/location/: mod.rs
civic-stream/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  ROADMAP.adoc  SECURITY.md
civic-stream/.machine_readable/: ECOSYSTEM.scm
civic-stream/docs/: CITATIONS.adoc
contractiles/intend/: Intentfile.a2ml
contractiles/trust/: Trustfile.a2ml
docs/: CITATIONS.adoc  tech-debt-2026-05-26.md
docs/decisions/: 0001-initial-architecture.adoc
docs/planning/: HANDOVER_SUMMARY.md  RSR_COMPLIANCE.md
indieweb2-bastion/: .echidnabot.toml  .gitignore  .tool-versions  0-AI-MANIFEST.a2ml  CONTRIBUTING.md  CRYPTO-POLICY.adoc  Containerfile  Justfile  PROJECT_STATUS.adoc  ROADMAP.adoc  SECURITY.adoc  SONNET-TASKS.md  compose.toml  deno.json  eclexiaiser.toml  package-lock.json  package.json
indieweb2-bastion/.github/: dependabot.yml
indieweb2-bastion/.machine_readable/: CRYPTO-POLICY.a2ml  CRYPTO-POLICY.scm  META.scm
infrastructure/: podman-compose.yml
scripts/: run_tests.sh  setup_dev.sh
(+113 files in other folders)
